...
        Spacer(Modifier.height(SignInLogoToContentSpacing))
        Column(
            modifier = Modifier.offset(y = SignInContentVerticalOffset),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            Text(
                text = "Sign in with Google",
                color = Color.White,
                fontSize = 28.sp,
                fontWeight = FontWeight.Bold,
                textAlign = TextAlign.Center
            )
            Spacer(Modifier.height(SignInTitleToBenefitsSpacing))
...
